Small changes including brand svg font correction, collapsible menu color correction, and cutting off description strings that are too long in collection.js display

--- a/src/encoded/static/scss/encoded/modules/_navbar.scss
+++ b/src/encoded/static/scss/encoded/modules/_navbar.scss
@@ -49,12 +49,12 @@
     margin-right: 0;
     background-color: #ffffff;
     .icon-bar{
-        background-color: #999999;
+        background-color: #999999 !important;
     }
     &:hover {
       border-color: #000000;
       .icon-bar{
-          background-color: #000000;
+          background-color: #000000 !important;
       }
     }
 }
